[package]
name = "ipfs2filecoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
tempfile = "3"
anyhow = "1"
sscanf = "0.2"